# hanukkah-of-data

./: .gitignore  README.md  full_writeup.ipynb  part1.ipynb  part2.ipynb  part3.ipynb  part4.ipynb  part5.ipynb  part6.ipynb  part7.ipynb  part8.ipynb  pyproject.toml  test.py
src/hannuka_of_data/: __init__.py
