[project]
name = "hannuka-of-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.12.0",
    "adbc-driver-sqlite>=1.2.0",
    "pyarrow>=18.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
